<resources>
    <string name="app_name">HSK Words</string>
    <string name="pinyin">Pinyin</string>
    <string name="chinese">Chinese</string>
    <string name="meaning">Meaning</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="words">Words</string>
    <string name="sentences">Sentences</string>
    <string name="empty">Please write a word</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="save_data">Save Data</string>
    <string name="log_in">Login</string>
    <string name="forget_password">Reset password</string>
    <string name="adding_user">Add new user</string>
    <string name="don_t_have_an_account_nsign_up_here">Don\'t have an account?\nSign Up Here</string>
    <string name="ok">OK</string>
    <string name="network_error">Network error</string>
    <string name="can_not_log_in">Can not log in</string>
    <string name="please_write_password">Please write the password</string>
    <string name="please_write_email">Please write the email</string>
    <string name="test">Test</string>
    <string name="hsk">HSK</string>
    <string name="account">Account</string>
    <string name="adding_hsk1">Adding HSK1 Words, This operation happens only one time which is after installing …</string>
    <string name="show_pinyin">Showing pinyin</string>
    <string name="next">Next</string>
    <string name="words_game">Word\'s game</string>
    <string name="choose_type">Choose a type</string>
    <string name="this_day">This day</string>
    <string name="this_month">This month</string>
    <string name="you_are_not_registered">You are not registered, Please register to use your own words</string>

</resources>