<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="add_word_view_mode"
            type="com.study.mystudyapp.ui.main.addword.AddWordViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.main.addword.AddWordActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/chinese"
            app:startIconContentDescription="@string/chinese">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/pinyin"
            app:startIconContentDescription="@string/pinyin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/meaning"
            app:startIconContentDescription="@string/meaning">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/info"
                android:onClick="save"
                android:text="@string/save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/delete"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/danger"
                android:onClick="delete"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</layout>

